tests/warn/namespace-redefinition2/test.jo
namespace test.lib // error

type A = Int

data List[T] = Nil | Cons(head: T, tail: List[T])

def double(n: A): A = n + n
